cmake_minimum_required(VERSION 3.14)
project(icpc-train-22-23)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -pedantic -Wfloat-equal -Wlogical-op -Wshift-overflow=2 -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC -DONPC -fsanitize=address -fsanitize=undefined")

add_executable(A1 contest-01/A1.cpp)
add_executable(B1 contest-01/B1.cpp)
add_executable(B1_final contest-01/B1_final.cpp)
add_executable(D1 contest-01/D1.cpp)
add_executable(A2 contest-02/A2.cpp)
add_executable(C2 contest-02/C2.cpp)
add_executable(A3 contest-03/A3.cpp)
add_executable(C3 contest-03/C3.cpp)
add_executable(A4 contest-04/A4.cpp)
add_executable(C4 contest-04/C4.cpp)
add_executable(D5 contest-05/D5.cpp)
add_executable(A5 contest-05/A5.cpp)
add_executable(C5 contest-05/C5.cpp)
add_executable(A6 contest-06/A6.cpp)
add_executable(B6 contest-06/B6.cpp)
add_executable(B6_bottom contest-06/B6_bottom.cpp)